implemented inheritance structure for translation class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,5 +54,6 @@ add_executable(fpg
                   src/triangle.cpp
                   src/triangulation.cpp
                   src/vertex.cpp
+                  src/translationKinetic.cpp
                )
 include_directories(includes)
